force-app/main/default/objects/WeddingPackage__c/WeddingPackage__c.object-meta.xml
<CustomObject>
    <label>Wedding Package</label>
    <pluralLabel>Wedding Packages</pluralLabel>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>패키지 등급(베이직/스탠다드/프리미엄)의 정의. 실제 판매되는 것은 Opportunity의 OpportunityLineItem 조합이고, 이 오브젝트는 "어떤 카테고리를 묶을지"와 "할인율"에 대한 템플릿 역할만 한다.</description>
</CustomObject>