force-app/main/default/objects/WeddingPackage__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>설명</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>