force-app/main/default/objects/WeddingPackage__c/fields/DiscountRate__c.field-meta.xml
<CustomField>
    <fullName>DiscountRate__c</fullName>
    <label>할인율</label>
    <type>Percent</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>개별 구매 합산 대비 할인율(%). 예: 10 = 10% 할인</description>
</CustomField>