force-app/main/default/objects/WeddingPackage__c/fields/IncludedFamilies__c.field-meta.xml
<CustomField>
    <fullName>IncludedFamilies__c</fullName>
    <label>포함 카테고리</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Venue</fullName>
            </value>
            <value>
                <fullName>Dress</fullName>
            </value>
            <value>
                <fullName>Makeup</fullName>
            </value>
            <value>
                <fullName>Photo</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Invitation</fullName>
            </value>
            <value>
                <fullName>Suit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>이 패키지에 포함된 Product2 Family 목록</description>
</CustomField>